--- a/config.css
+++ b/config.css
@@ -3,6 +3,7 @@
 :root {
     --laranja: #F98E12;
     --amarelo: #EEAA34;
+    --amarelo-hover: #e6960d;
     --branco: #FFF;
     --cinza: #C1C1C1;
     --preto: #1E1E1E;
