--- a/page/style.css
+++ b/page/style.css
@@ -306,6 +306,11 @@ main {
     justify-content: center;
     align-items: center;
     border-radius: 30px;
+    transition: all .2s;
+}
+
+.download-btn:hover {
+    background: var(--amarelo-hover);
 }
 
 .download-btn p {
